syntax = "proto3";

import public "common/common.proto";

package runtime;

message InstantiateModuleRequest {
  common.ModuleBody module_reference = 1;
  common.Target target = 2;
  map<string, common.ValueKind> output_shape = 3;
  map<string, common.Value> default_input = 4;
}

message InstantiateModuleResponse { string instance_id = 1; }

message RunModuleRequest {
  string instance_id = 1;
  map<string, common.LabeledData> input = 2;
  bool keep_alive = 4;
}

message RunModuleResponse { map<string, common.LabeledData> output = 1; }

service Runtime {
  rpc InstantiateModule(InstantiateModuleRequest)
      returns (InstantiateModuleResponse) {}

  rpc RunModule(RunModuleRequest) returns (RunModuleResponse) {}
}